--- a/src/main/resources/templates/err/403.mustache
+++ b/src/main/resources/templates/err/403.mustache
@@ -3,7 +3,7 @@
 <div class="container my-3">
     <h1>Forbidden 403</h1>
     <hr>
-    <h4>{{mag}}</h4>
+    <h4>{{msg}}</h4>
 </div>
 
 {{> layout/footer}}
