--- a/src/main/resources/templates/err/500.mustache
+++ b/src/main/resources/templates/err/500.mustache
@@ -3,7 +3,7 @@
 <div class="container my-3">
     <h1>Internal Server Error 500</h1>
     <hr>
-    <h4>{{mag}}</h4>
+    <h4>{{msg}}</h4>
 </div>
 
 {{> layout/footer}}
