--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -4,12 +4,12 @@
 
     <!-- 수정삭제버튼 -->
     <div class="d-flex justify-content-end">
-        {{#board.isOwner}}
+        {{#board.isBoardOwner}}
             <a href="/board/{{board.id}}/update-form" class="btn btn-warning me-1">수정</a>
             <form action="/board/{{board.id}}/delete" method="post">
                 <button class="btn btn-danger">삭제</button>
             </form>
-        {{/board.isOwner}}
+        {{/board.isBoardOwner}}
     </div>
 
     <div class="d-flex justify-content-end">
@@ -30,6 +30,7 @@
         <!-- 댓글등록 -->
         <div class="card-body">
             <form action="/reply/save" method="post">
+                <input type="hidden" name="boardId" value="{{board.id}}">
                 <textarea class="form-control" rows="2" name="comment"></textarea>
                 <div class="d-flex justify-content-end">
                     <button type="submit" class="btn btn-outline-primary mt-1">댓글등록</button>
@@ -49,9 +50,11 @@
                         <div class="px-1 me-1 bg-primary text-white rounded">{{user.username}}</div>
                         <div>{{comment}}</div>
                     </div>
+                    {{#replyOwner}}
                     <form action="/reply/{{id}}/delete" method="post">
                         <button class="btn">🗑</button>
                     </form>
+                    {{/replyOwner}}
                 </div>
             {{/board.replies}}
         </div>
