--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -52,6 +52,7 @@
                     </div>
                     {{#replyOwner}}
                     <form action="/reply/{{id}}/delete" method="post">
+                        <input type="hidden" name="boardId" value="{{board.id}}">
                         <button class="btn">🗑</button>
                     </form>
                     {{/replyOwner}}
